[SYNCOPE-1517] Making JdbcAuditAppender configurable (but still enabled by default)